Started work on terms of use in registration flow. Improved login. Fixed a bug in cookie. Fixed facebook profile picture overflow bug. Improved font.

--- a/Web/css/main.css
+++ b/Web/css/main.css
@@ -19,6 +19,27 @@ div{
 	position:relative;
 	display:block;
 }
+h1, h2, h3 {
+	font-weight: bold;
+	color: #333333;
+	padding: 0;
+	margin: 0;
+	text-shadow: 0 0 4px #D5D4D2;
+	-moz-text-shadow: 0 0 4px #D5D4D2;
+	-webkit-text-shadow: 0 0 4px #D5D4D2;
+}
+
+h1 {
+	font-size: 24px;
+}
+
+h2 {
+	font-size: 18px;
+}
+
+h3 {
+	font-size: 18px;
+}
 
 ul, li{
 	padding:0;
